test_suite/tests/ui/integer/validate/duplicated.stderr
error: Duplicated validator `less_or_equal`.
       You're a great engineer, but don't forget to take care of yourself!
 --> tests/ui/integer/validate/duplicated.rs:3:54
  |
3 | #[nutype(validate(less_or_equal = 0, less_or_equal = 0))]
  |                                                      ^
